--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@ __pycache__/
 # C extensions
 *.so
 
+#Personal Additions --------------------------------------------------------
+books/
+
+
 # Distribution / packaging
 .Python
 build/
